default/objects/success__Metric__c/success__Metric__c.object-meta.xml
<CustomObject>
    <description>Used to store the results of Scheduled Behaviours for subsequent Assessment &amp; Rewarding.</description>
    <label>Aggregate Scheduled Behaviour</label>
    <nameField>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aggregate Scheduled Behaviours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>