default/objects/success__Metric__c/listViews/success__All1.listView-meta.xml
<ListView>
    <fullName>success__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>